force-app/main/default/objects/Lab_Test__c/Lab_Test__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Lab Test.</description>
    <label>Lab Test</label>
    <nameField>
        <label>Lab Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>