force-app/main/default/objects/Lab_Test__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Lab Tests</relationshipLabel>
    <relationshipName>Lab_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>