force-app/main/default/objects/Lab_Test__c/fields/Standard_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Rate__c</fullName>
    <label>Standard Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>